--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/product-api
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.application.name=ProductsManagement
